--- a/Flagrum.Core/Flagrum.Core.csproj
+++ b/Flagrum.Core/Flagrum.Core.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="CsvHelper" Version="27.2.1" />
+        <PackageReference Include="K4os.Compression.LZ4.Streams" Version="1.3.5" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
@@ -14,6 +15,12 @@
 
     <ItemGroup>
       <None Remove="zlib64.dll" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="K4os.Compression.LZ4.Streams">
+        <HintPath>..\..\..\Users\Kieran\.nuget\packages\k4os.compression.lz4.streams\1.3.5\lib\net6.0\K4os.Compression.LZ4.Streams.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
