--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Report a Flagrum bug.
-title: ''
+title: '[Bug]: '
 labels: ["bug"]
 body:
   - type: markdown
@@ -18,8 +18,6 @@ body:
         - Windows 10 64-Bit
         - Windows 11 64-Bit
         - Other
-      validations:
-        required: true
   - type: input
     id: version
     attributes:
