--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -95,6 +95,8 @@ body:
 
         **Failure to comply with these terms may result in a ban from this repository.**
       options:
+        - label: I confirm that I have ensured this bug hasn't already been reported in another issue on this repository.
+          required: true
         - label: I confirm that this bug report is pertaining to Flagrum, not an individual mod, the game itself, or an issue with my system or files.
           required: true
         - label: I confirm that I am using a legitimate copy of the game.
