fix: resolve issue with feature request template
The template wasn't working due to a syntax error. Fixed now.

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Request a new Flagrum feature or a change to an existing feature.
-title: " "
+title: "[Request]: "
 labels: ["enhancement"]
 body:
   - type: textarea
