fix: ensure dependencies are copied post-publish
The CopyDependencies MSBuild step in Flagrum.csproj stopped working at some point (does not execute at all during dotnet publish), so this has been replaced with a copy step in the CI workflow.

Resolves: #200

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,9 @@ jobs:
 
       - name: Publish Flagrum
         run: dotnet publish src/Flagrum/Flagrum.csproj -c Release -o publish -r win-x64 --self-contained true
+        
+      - name: Copy External Dependencies
+        run: xcopy libs\* publish\ /Y
 
       - name: Download Previous Release
         if: steps.setup.outputs.prerelease == 'false'
